lang/macro/tests/ui/fail/01-constructor-returns.stderr
error: constructor of liquid contract should not have return value
  --> $DIR/01-constructor-returns.rs:10:31
   |
10 |         pub fn new(&mut self) -> Self {}
   |                               ^^^^^^^
